--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Thank you for using our template!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx serve"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "sass": "^1.75.0"
+    "sass": "^1.75.0",
+    "serve": "^14.2.3"
   }
 }
